# cmake_skeleton_cxx

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: utils.cmake
docs/: guide.md
include/skeleton/: foo.hpp
scripts/: download.sh  env.sh  util.py
src/: foo.cpp  main.cpp
test/: CMakeLists.txt  test_foo.cpp
